# unitree_mujoco

./: .gitignore
example/cpp/: CMakeLists.txt
example/cpp/include/: MPC.hpp  Requiredheaders.hpp  WBIC.hpp  communication.hpp  controller.hpp
example/cpp/robots/go2_description/urdf/: go2_description.urdf
example/cpp/robots/h1_description/urdf/: h1.urdf
example/cpp/src/: MPC.cpp  WBIC.cpp  communication.cpp  controller.cpp  main.cpp
simulate/: CMakeLists.txt  config.yaml
simulate/src/: main.cc
simulate/src/RL/: CartPole_learner copy(self).py  CartPole_learner(action_c).py  CartPole_learner(just reward).py  CartPole_learner_init.py  CartPole_learner_sac.py  CartPole_policy_check.py  CartPole_policy_check_sac.py  Policy.py  cartpole(copy).py
simulate/src/controller/: MPC.cpp  MPC.hpp  Requiredheaders.hpp  WBIC.cpp  WBIC.hpp  controller.cpp  controller.hpp
simulate/src/unitree_sdk2_bridge/: unitree_sdk2_bridge.cc
unitree_robots/go2_arm_dof1/: go2_arm_dof1.xml  scene-dof1.xml
unitree_robots/go2_arm_dof1/assets/: thigh.stl  trunk.stl  z1_GripperStator.stl  z1_Link02.stl  z1_Link05.stl  z1_Link06.stl
unitree_robots/go2_arm_dof2/: go2_arm_dof2.xml  scene-dof2.xml
unitree_robots/go2_arm_dof2/assets/: hip.stl  thigh_mirror.stl  z1_GripperMover.stl  z1_Link00.stl  z1_Link01.stl  z1_Link03.stl  z1_Link04.stl
unitree_robots/h1/: h1.xml
